reports/Optimization.log
Traceback (most recent call last):
  File "/home/ludch/miniconda3/envs/jupyter_book/lib/python3.10/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/home/ludch/miniconda3/envs/jupyter_book/lib/python3.10/site-packages/nbclient/client.py", line 1085, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/ludch/miniconda3/envs/jupyter_book/lib/python3.10/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/ludch/miniconda3/envs/jupyter_book/lib/python3.10/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/home/ludch/miniconda3/envs/jupyter_book/lib/python3.10/asyncio/base_events.py", line 641, in run_until_complete
    return future.result()
  File "/home/ludch/miniconda3/envs/jupyter_book/lib/python3.10/site-packages/nbclient/client.py", line 551, in async_execute
    await self.async_execute_cell(
  File "/home/ludch/miniconda3/envs/jupyter_book/lib/python3.10/site-packages/nbclient/client.py", line 846, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/home/ludch/miniconda3/envs/jupyter_book/lib/python3.10/site-packages/nbclient/client.py", line 748, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
from scipy import optimize

def f(X):
  """
  Cost function.
  """  
  return (X**2).sum()

X0 = [1.,1.] # Initial guess
sol = optimize.minimize(f, X0, method = "nelder-mead")
X = sol.x
print "Solution: ", X

------------------

[0;36m  Input [0;32mIn [2][0;36m[0m
[0;31m    print "Solution: ", X[0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m Missing parentheses in call to 'print'. Did you mean print(...)?

SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)? (1696389007.py, line 12)

